# llm-sectest

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: BLOG.md  METHODOLOGY.md  environment.md  phase1_verification.txt
payloads/: owasp_llm.yaml
reports/after/: report.json  report.md
reports/before/: report.json  report.md
scripts/: check_ollama.py  diagnose.py
src/llm_sectest/: cli.py  client.py  config.py  engine.py  oracles.py  payloads.py  report.py
tests/: attack_cases.py  conftest.py  test_owasp_llm.py  test_remediation.py
