[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-sectest"
version = "0.1.0"
description = "Automated OWASP Top 10 for LLMs (2025) security testing framework"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
llm-sectest = "llm_sectest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_sectest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
